# retro-planner

./: .gitignore  AGENTS.md  Dockerfile  README.MD  REFACTOR_PLAN.md  app.py  docker-compose.yml  eval  eval.md  pyproject.toml
.claude/: settings.json
base_models_res/: ChemLLM-20B-Chat.ipynb
docs/: system_diagrams.md
docs/diagrams/: production_sequence.mmd
fine-tune/: 4.07.ipynb  5.07-test.ipynb
fine-tune/v2/: 01_prepare_reactant_data.ipynb  02_prepare_condition_data.ipynb  03_train_reactant_model_qwen7b.ipynb  04_train_condition_model_qwen7b.ipynb  05_evaluate_models.ipynb  06_agent_inference_demo.ipynb
fine-tune/v2/res/: 03_train_reactant_model_qwen7b.ipynb  04_train_condition_model_qwen7b.ipynb  05_evaluate_models.ipynb  06_agent_inference_demo.ipynb  08_reactiont5_conditions_agent_demo.ipynb  condition_eval.json  reactant_eval.json  sample_predictions.jsonl
scripts/: evaluate_retrosynthesis.py  index_uspto50k_to_qdrant.py
src/retro_planner/: __init__.py  app.py  chemistry.py  config.py  evaluation.py  llm_providers.py  planning.py  prompting.py  prompts.py  reaction_classes.py  reasoning.py  rendering.py  retrieval.py  streamlit_views.py
src/retro_planner/providers/: __init__.py  chat_api.py  local_causal.py  local_gguf.py  local_seq2seq.py
testing/: test-reactions
tests/: test_chemistry.py  test_evaluation.py  test_indexer.py  test_planning.py  test_prompting.py  test_prompts.py  test_providers.py  test_reaction_classes.py  test_reasoning.py  test_retrieval.py  test_retrieval_scoring.py
