[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retro-planner"
version = "0.1.0"
description = "Streamlit retrosynthesis planner with RDKit, Groq, and optional Qdrant RAG."
readme = "README.MD"
requires-python = ">=3.10"
dependencies = [
    "groq",
    "numpy",
    "Pillow",
    "qdrant-client",
    "rdkit",
    "streamlit",
    "streamlit-ketcher",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
indexing = [
    "datasets",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
